--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "lucide-react": "^0.516.0",
         "next": "15.3.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "recharts": "^3.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
