--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "axios": "^1.10.0",
+        "axios": "^1.12.2",
         "date-fns": "^4.1.0",
-        "lucide-react": "^0.516.0",
-        "next": "15.3.3",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "recharts": "^3.1.0"
+        "lucide-react": "^0.546.0",
+        "next": "15.5.6",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
+        "recharts": "^3.3.0"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "autoprefixer": "^10.4.14",
-        "eslint": "^9",
-        "eslint-config-next": "15.3.3",
-        "postcss": "^8.4.24",
-        "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "@tailwindcss/postcss": "^4.1.15",
+        "@types/node": "^24.9.1",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.2",
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.38.0",
+        "eslint-config-next": "15.5.6",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.15",
+        "typescript": "^5.9.3"
     }
 }
