--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    // "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
