--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "next": "16.0.8",
         "react": "^19.2.1",
         "react-dom": "^19.2.1",
+        "react-easy-crop": "^5.5.6",
         "recharts": "^3.5.1"
     },
     "devDependencies": {
